--- a/client/src/app/modules/quotation/components/quotation/quotation.component.html
+++ b/client/src/app/modules/quotation/components/quotation/quotation.component.html
@@ -275,6 +275,10 @@
           <attachments [entity]="quotation" [editMode]="isValidatedStatusForUploadFile()"
             [entityType]="getEntityType().entityType">
           </attachments>
+          <attachments [entity]="getEntityForPendingAttachments()!" [editMode]="false"
+            *ngIf="instanceOfCustomerOrderFn(quotation) && quotation.pendingAttachments && quotation.pendingAttachments.length>0 && quotation.customerOrderStatus.code==CUSTOMER_ORDER_STATUS_DRAFT && getEntityForPendingAttachments()"
+            [entityType]="getEntityType().entityType">
+          </attachments>
         </mat-tab>
         <mat-tab label="CRI"
           *ngIf="quotation && instanceOfCustomerOrderFn(quotation) && (hasOneCri() || isAskNewCri())">
