--- a/client-myjss/src/app/modules/my-account/components/quotation-details/quotation-details.component.html
+++ b/client-myjss/src/app/modules/my-account/components/quotation-details/quotation-details.component.html
@@ -487,6 +487,34 @@
             <i class="ai-cart ms-n1 me-2"></i>Payer un acompte
           </a>
         </div>
+        <div *ngIf="quotation">
+          <div *ngFor="let doc of quotation!.documents">
+            <div *ngIf="doc.documentType.code == documentTypeBilling.code">
+              <div class="d-flex align-items-center pt-4 pb-1 my-2">
+                <h3 class="h6 mb-0 me-3">Renseignements administratifs</h3>
+              </div>
+              <div class="mt-4">
+                <div *ngIf="doc.commandNumber" class="align-items-center fs-sm text-dark pb-1 mb-2">
+                  <div class="ms-2">
+                    <h6>N° de commande :</h6>
+                  </div>
+                  <div class="ms-4">
+                    {{doc.commandNumber}}
+                  </div>
+                </div>
+                <div *ngIf="doc.externalReference" class="align-items-center fs-sm text-dark pb-1 mb-4 ">
+                  <div class="ms-2">
+                    <h6>N° de référence :</h6>
+                  </div>
+                  <div class="ms-4">
+                    {{doc.externalReference}}
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
         <div class="d-flex align-items-center pt-2 pb-1 mb-2">
           <h3 class="h6 mb-0 me-3">Montant prévisionnel</h3>
         </div>
