--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -154,6 +154,13 @@ mini-fab-add mat-form-field.mat-mdc-form-field, mat-option, .mat-mdc-cell {
   z-index: 999;
 }
 
+.seventh-fab-button {
+  position: fixed !important;
+  bottom: 40px !important;
+  right: 460px !important;
+  z-index: 999;
+}
+
 .mat-expansion-panel-header-description {
   flex-grow: 0 !important;
 }
