--- a/client-jss/src/app/main/components/post/post.component.html
+++ b/client-jss/src/app/main/components/post/post.component.html
@@ -27,25 +27,42 @@
           <hr class="d-none d-lg-block">
           <div class="row inline-row align-items-center mb-2">
             <!-- Author info -->
-            <div class="col-auto position-relative border-end pe-1">
+            <div class="col-auto position-relative border-end pe-3">
               <div class="row align-items-center">
                 <div class="col-auto avatar avatar-xl"
                   *ngIf="post.isHiddenAuthor==undefined || post.isHiddenAuthor==null || post.isHiddenAuthor==false">
-                  <img class="avatar-img rounded-circle" [src]="post.fullAuthor.avatar_url_size_48" alt="avatar">
+                  <img style="cursor: pointer;" [routerLink]='"/post/author/" + post.fullAuthor.slug'
+                    class="avatar-img rounded-circle" [src]="post.fullAuthor.avatar_url_size_48" alt="avatar">
                 </div>
                 <div class="col">
-                  <a style="cursor: pointer;" [routerLink]=' "/post/author/" + post.fullAuthor.slug'
-                    class="stretched-link d-block"
+                  <a style="cursor: pointer;" [routerLink]=' "/post/author/" + post.fullAuthor.slug' class="d-block"
                     *ngIf="post.isHiddenAuthor==undefined || post.isHiddenAuthor==null || post.isHiddenAuthor==false">{{post.fullAuthor.name}}</a>
                   <p *ngIf="post.fullAuthor.description && (post.isHiddenAuthor==undefined || post.isHiddenAuthor==null || post.isHiddenAuthor==false)"
                     class="fs-8">{{post.fullAuthor.description}}</p>
-                  <span class="list-inline-item d-lg-block fs-8">{{post.date | literalDatePipe}}</span>
-                  <span class="list-inline-item d-lg-block fs-8">{{getTimeReading(post.contentText)}}</span>
                 </div>
+              </div>
+              @if(post.postAdditionalAuthors && post.postAdditionalAuthors.length>0){
+              <div *ngFor="let author of post.postAdditionalAuthors" class="row align-items-center mt-1">
+                <div class="col-auto avatar avatar-xl"
+                  *ngIf="post.isHiddenAuthor==undefined || post.isHiddenAuthor==null || post.isHiddenAuthor==false">
+                  <img style="cursor: pointer;" [routerLink]='"/post/author/" + author.slug'
+                    class="avatar-img rounded-circle" [src]="author.avatar_url_size_48" alt="avatar">
+                </div>
+                <div class="col">
+                  <a style="cursor: pointer;" [routerLink]='"/post/author/" + author.slug' class="d-block"
+                    *ngIf="post.isHiddenAuthor==undefined || post.isHiddenAuthor==null || post.isHiddenAuthor==false">{{author.name}}</a>
+                  <p *ngIf="author.description && (post.isHiddenAuthor==undefined || post.isHiddenAuthor==null || post.isHiddenAuthor==false)"
+                    class="fs-8">{{author.description}}</p>
+                </div>
+              </div>
+              }
+              <div class="mt-1">
+                <span class="list-inline-item d-lg-block fs-8">{{post.date | literalDatePipe}}</span>
+                <span class="list-inline-item d-lg-block fs-8">{{getTimeReading(post.contentText)}}</span>
               </div>
             </div>
             <!-- Player START -->
-            <div class="col list-inline list-unstyled0 ps-3 me-2">
+            <div class="col list-inline list-unstyled0 ps-4 me-2">
               <div class="row inline-row align-items-center">
                 <div class="row post-player-bg border rounded-2 ms-0 p-1 align-items-center">
                   <a class="col-auto px-1 btn-dark rounded-circle btn-circle-sm fs-6"
