--- a/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.html
+++ b/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.html
@@ -62,7 +62,7 @@
     <ng-container *ngIf="selectedAssoIndex!=null && selectedServiceIndex!=null && quotation.assoAffaireOrders && quotation.assoAffaireOrders[selectedAssoIndex] &&
        quotation.assoAffaireOrders[selectedAssoIndex].services[selectedServiceIndex]">
       <ul ngbNav #nav="ngbNav" [activeId]="activeId" class="nav-tabs flex-nowrap"
-        (navChange)="changeProvisionNoticeTemplateDesciption($event)">
+        (navChange)="changeProvisionNoticeTemplateDescription($event)">
 
         <ng-container
           *ngFor="let provision of quotation.assoAffaireOrders[selectedAssoIndex].services[selectedServiceIndex].provisions; let provisionIndex = index">
@@ -179,15 +179,18 @@
                   </div>
                 </div>
                 <div class="d-flex flex-column flex-md-row flex-sm-wrap align-items-start"
-                  *ngIf=" noticeTemplateDescription && noticeTemplateDescription.isUsingTemplate && getPossibleTemplates(quotation.assoAffaireOrders[selectedAssoIndex].services[selectedServiceIndex]) && getPossibleTemplates(quotation.assoAffaireOrders[selectedAssoIndex].services[selectedServiceIndex])!.length>1">
+                  *ngIf=" noticeTemplateDescription 
+                  && noticeTemplateDescription.isUsingTemplate 
+                  && getPossibleTemplates(quotation.assoAffaireOrders[selectedAssoIndex].services[selectedServiceIndex]) 
+                  && getPossibleTemplates(quotation.assoAffaireOrders[selectedAssoIndex].services[selectedServiceIndex])!.length>1">
                   <h6 class="w-100 mb-3">
                     <i class="ai-wallet pe-2"></i>Précisez le modèle souhaité :
                   </h6>
                   <div
                     *ngFor="let template of getPossibleTemplates(quotation.assoAffaireOrders[selectedAssoIndex].services[selectedServiceIndex])"
-                    class="btn btn-outline-secondary m-1 w-100 w-sm-auto  btn-wrap btn-service-family"
+                    class="btn btn-outline-secondary m-1 w-100 w-sm-auto btn-wrap btn-service-family"
                     [class.active]="noticeTemplateDescription && noticeTemplateDescription.selectedTemplate &&  noticeTemplateDescription.selectedTemplate.id == template.id"
-                    (click)="changeIsShowNoticeTemplate(true, provision.isRedactedByJss,template ,quotation.assoAffaireOrders[selectedAssoIndex].services[selectedServiceIndex])">
+                    (click)="changeIsShowNoticeTemplate(true, provision.isRedactedByJss,template,quotation.assoAffaireOrders[selectedAssoIndex].services[selectedServiceIndex])">
                     {{template.label}}</div>
                 </div>
                 <hr class="border-white" id="option-form-end">
