--- a/client-jss/src/app/main/components/announcement/announcement.component.html
+++ b/client-jss/src/app/main/components/announcement/announcement.component.html
@@ -39,11 +39,17 @@
                           <span class="ms-2"></span> {{announcement.publicationDate | date:'EEEE d MMMM y'}}
                         </li>
                       </ul>
-                      <div class="col-lg-12 mt-2">
-                        <p *ngIf="announcement && announcement.noticeHeader && !announcement.isLegacy"><span
-                            [innerHTML]="announcement.noticeHeader| trustHtml"></span></p>
-                        <p *ngIf="announcement && announcement.notice"><span
-                            [innerHTML]="announcement.notice| trustHtml"></span></p>
+                      <div class="col-lg-12 mt-2" *ngIf="!isServer">
+                        <p *ngIf="announcement && announcement.noticeHeader && !announcement.isLegacy">
+                          <span [innerHTML]="announcement.noticeHeader | trustHtml"></span>
+                        </p>
+                        <p *ngIf="announcement && announcement.notice">
+                          <span [innerHTML]="announcement.notice | trustHtml"></span>
+                        </p>
+                      </div>
+                      <div class="col-lg-12 mt-2" *ngIf="isServer">
+                        {{announcement.noticeHeader}}
+                        {{announcement.notice}}
                       </div>
                     </div>
                   </div>
