--- a/client/src/app/modules/administration/components/referentials/referential-service/referential-service-type.component.html
+++ b/client/src/app/modules/administration/components/referentials/referential-service/referential-service-type.component.html
@@ -43,6 +43,13 @@
           </tr>
           <tr>
             <td>
+              <generic-input [(model)]="selectedEntity.reportingGroup" label="Groupe dans le reporting"
+                [maxLength]="255" [form]="entityForm" propertyName="reportingGroup" [isMandatory]="true"
+                [isDisabled]="!editMode"></generic-input>
+            </td>
+          </tr>
+          <tr>
+            <td>
               <generic-textarea [(model)]="selectedEntity.comment" label="Commentaire MyJSS" [form]="entityForm"
                 propertyName="comment" [isMandatory]="false" [isDisabled]="!editMode"
                 [numberOfLines]="5"></generic-textarea>
