--- a/client-osiris/src/app/libs/generic-list/generic-list.component.html
+++ b/client-osiris/src/app/libs/generic-list/generic-list.component.html
@@ -73,7 +73,7 @@
       <div class="flex-grow-1 overflow-auto p-3">
         <div class="tab-content" [ngbNavOutlet]="nav"></div>
       </div>
-      <div class="card   mb-0 d-none d-lg-flex rounded-end-0 mt-auto">
+      <div class="card mb-0 d-flex rounded-end-0 mt-auto">
         <div class="card-body d-flex align-items-center gap-2">
           <button class="btn btn-primary w-100 btn-new-event" type="submit">
             <ng-icon name="tablerSearch" class="me-2" />
