refacto header footer from pdf documents

--- a/client/src/app/modules/dashboard/components/provision-kanban/provision-kanban.component.html
+++ b/client/src/app/modules/dashboard/components/provision-kanban/provision-kanban.component.html
@@ -177,7 +177,7 @@
         </button>
         <button mat-menu-item
           *ngIf="selectedEntity && selectedEntity.announcement && selectedEntity.announcement.confrere && selectedEntity.announcement.confrere.journalType.id==journalTypeSpel.id"
-          (click)="generatePublicationFlagMail()">
+          (click)="generatePublicationFlagMail(selectedEntity.announcement)">
           <span>Recevoir le mail de témoin de publication</span>
           <button mat-menu-item
             *ngIf="selectedEntity && selectedEntity.announcement && selectedEntity.announcement.confrere && selectedEntity.announcement.confrere.journalType.id!=journalTypeSpel.id"
