--- a/client-jss/src/app/main/components/header/header.component.html
+++ b/client-jss/src/app/main/components/header/header.component.html
@@ -226,7 +226,7 @@
   </div>
   <div class="modal-body">
     <div class="row align-items-center"
-      [ngClass]="{'h-50': indexedEntities && indexedEntities.length>0, 'h-100':  !indexedEntities || indexedEntities.length<=0}">
+      [ngClass]="{'h-50': posts && posts.length>0, 'h-100':  !posts || posts.length<=0}">
       <div class="col-lg-5 mx-auto mb-5">
         <h2 class="mb-4">Rechercher des articles du JSS</h2>
         <!-- Search form START -->
@@ -251,47 +251,45 @@
       </div>
     </div>
     <div class="row">
-      <div *ngIf="indexedEntities" class="col-lg-8 mx-auto">
-        <div *ngFor="let post of indexedEntities">
+      <div *ngIf="posts" class="col-lg-8 mx-auto">
+        <div *ngFor="let post of posts">
           <article data-aos="fade-up" class="blog-style2 card my-3">
             <div class="feature-image order-1 order-lg-0">
               <div class="image-frame image-hover-style-1">
-                <a (click)="openPost( )" [routerLink]='"/post/" + post.text.slug'> <img class="lazyload"
-                    *ngIf="post.text.media"
-                    [src]="post.text.media.urlLarge!=null ? post.text.media.urlLarge : post.text.media.urlFull"
-                    [alt]="post.text.media.alt_text" class="w-100"></a>
+                <a (click)="openPost( )" [routerLink]='"/post/" + post.slug'> <img class="lazyload" *ngIf="post.media"
+                    [src]="post.media.urlLarge!=null ? post.media.urlLarge : post.media.urlFull"
+                    [alt]="post.media.alt_text" class="w-100"></a>
               </div>
             </div>
             <div data-aos="fade-in" class="ms-3 card-body d-flex flex-column flex-lg-row align-items-stretch p-0">
               <div class="order-0 order-lg-1">
-                <div class="row align-items-center ms-0 mb-1"
-                  *ngIf="post.text.jssCategories && post.text.jssCategories.length>0">
-                  <a (click)="openCategoryPosts()" [routerLink]='"/post/category/" + post.text.jssCategories[0].slug'
-                    class="badge bg-info rounded-pill px-1 col-auto me-2 mb-0">{{post.text.jssCategories[0].name}}</a>
+                <div class="row align-items-center ms-0 mb-1" *ngIf="post.jssCategories && post.jssCategories.length>0">
+                  <a (click)="openCategoryPosts()" [routerLink]='"/post/category/" + post.jssCategories[0].slug'
+                    class="badge bg-info rounded-pill px-1 col-auto me-2 mb-0">{{post.jssCategories[0].name}}</a>
                 </div>
                 <h4>
-                  <a class="card-text-truncate" (click)="openPost( )" [routerLink]='"/post/" + post.text.slug'> <img
-                      *ngIf="post.text.isPremium" class="col-auto pe-1"
-                      src="/assets/images/premium-icon.svg">{{post.text.titleText}}</a>
+                  <a class="card-text-truncate" (click)="openPost( )" [routerLink]='"/post/" + post.slug'> <img
+                      *ngIf="post.isPremium" class="col-auto pe-1"
+                      src="/assets/images/premium-icon.svg">{{post.titleText}}</a>
                 </h4>
                 <div class="">
-                  <div class="card-truncate-6-line">{{post.text.excerptText}}
+                  <div class="card-truncate-6-line">{{post.excerptText}}
                   </div>
                 </div>
                 <div class="row align-items-center">
                   <div class="col-lg-6"
-                    *ngIf="post.text.isHiddenAuthor==undefined || post.text.isHiddenAuthor==null || post.text.isHiddenAuthor==false">
+                    *ngIf="post.isHiddenAuthor==undefined || post.isHiddenAuthor==null || post.isHiddenAuthor==false">
                     <div class="author-block">
                       <ul class="avatar list-inline mb-0">
-                        <li class="list-inline-item align-items-center" *ngIf="post.text.author"><a class="fs-9"><img
-                              [src]="post.text.author.avatar_url_size_24" [alt]="post.text.author.name" placement="top"
-                              [ngbTooltip]="post.text.author.name">
-                            {{post.text.author.name}}</a></li>
+                        <li class="list-inline-item align-items-center" *ngIf="post.fullAuthor"><a class="fs-9"><img
+                              [src]="post.fullAuthor.avatar_url_size_24" [alt]="post.fullAuthor.name" placement="top"
+                              [ngbTooltip]="post.fullAuthor.name">
+                            {{post.fullAuthor.name}}</a></li>
                       </ul>
                     </div>
                   </div>
                   <div class="col-lg-6"> <span class="date-info fs-9 float-lg-end">
-                      <span>Publié le {{post.text.date | literalDatePipe}}</span>
+                      <span>Publié le {{post.date | literalDatePipe}}</span>
                     </span>
                   </div>
                 </div>
