--- a/client-myjss/src/app/modules/quotation/components/notice-template/notice-template.component.html
+++ b/client-myjss/src/app/modules/quotation/components/notice-template/notice-template.component.html
@@ -17,7 +17,7 @@
             <div>
               <generic-input *ngIf="placeholder.dataType === SERVICE_FIELD_TYPE_TEXT" [(model)]="placeholder.label"
                 [label]="placeholder.label" [form]="form" [propertyName]="placeholder.code + '_' + placeholder.id"
-                [isDisabled]="false" [isMandatory]="false" [maxLength]="255">
+                [isDisabled]="false" [isMandatory]="true" [maxLength]="255">
               </generic-input>
             </div>
 
@@ -25,7 +25,7 @@
             <div>
               <generic-textarea *ngIf="placeholder.dataType === SERVICE_FIELD_TYPE_TEXTAREA"
                 [(model)]="placeholder.value" [label]="placeholder.label" [form]="form"
-                [propertyName]="placeholder.code + '_' + placeholder.id" [isDisabled]="false" [isMandatory]="false">
+                [propertyName]="placeholder.code + '_' + placeholder.id" [isDisabled]="false" [isMandatory]="true">
               </generic-textarea>
             </div>
 
@@ -33,7 +33,7 @@
             <div>
               <generic-date-picker *ngIf="placeholder.dataType === SERVICE_FIELD_TYPE_DATE"
                 [(model)]="placeholder.value" [label]="placeholder.label" [form]="form"
-                [propertyName]="placeholder.code + '_' + placeholder.id" [isMandatory]="false" [isDisabled]="false">
+                [propertyName]="placeholder.code + '_' + placeholder.id" [isMandatory]="true" [isDisabled]="false">
               </generic-date-picker>
             </div>
 
@@ -41,7 +41,7 @@
             <div>
               <generic-input *ngIf="placeholder.dataType === SERVICE_FIELD_TYPE_INTEGER" [(model)]="placeholder.value"
                 [label]="placeholder.label" [form]="form" [propertyName]="placeholder.code + '_' + placeholder.id"
-                [isMandatory]="false" [isDisabled]="false" type="number">
+                [isMandatory]="true" [isDisabled]="false" type="number">
               </generic-input>
             </div>
 
@@ -50,7 +50,7 @@
               <select-value-service-field-type *ngIf="placeholder.dataType === SERVICE_FIELD_TYPE_SELECT"
                 [(model)]="placeholder.value" [label]="placeholder.label" [form]="form"
                 [propertyName]="placeholder.code + '_' + placeholder.id" [serviceFieldType]="placeholder"
-                [isMandatory]="false" [isDisabled]="false">
+                [isMandatory]="true" [isDisabled]="false">
               </select-value-service-field-type>
             </div>
 
@@ -124,7 +124,7 @@
                         [label]="getFragmentInputLabel(placeholder, fragmentIndex, fragmentInstancesMap.get(selectedFragments[i]!.code)!)"
                         [form]="form"
                         [propertyName]="buildFormControlName(fragmentInstance.code, placeholder, fragmentIndex)"
-                        [isDisabled]="false" [isMandatory]="false" [maxLength]="255">
+                        [isDisabled]="false" [isMandatory]="true" [maxLength]="255">
                       </generic-input>
 
                       <!-- TEXTAREA -->
@@ -133,7 +133,7 @@
                         [label]="getFragmentInputLabel(placeholder, fragmentIndex, fragmentInstancesMap.get(selectedFragments[i]!.code)!)"
                         [form]="form"
                         [propertyName]="buildFormControlName(fragmentInstance.code, placeholder, fragmentIndex)"
-                        [isDisabled]="false" [isMandatory]="false">
+                        [isDisabled]="false" [isMandatory]="true">
                       </generic-textarea>
 
                       <!-- DATE -->
@@ -142,7 +142,7 @@
                         [label]="getFragmentInputLabel(placeholder, fragmentIndex, fragmentInstancesMap.get(selectedFragments[i]!.code)!)"
                         [form]="form"
                         [propertyName]="buildFormControlName(fragmentInstance.code, placeholder, fragmentIndex)"
-                        [isMandatory]="false" [isDisabled]="false">
+                        [isMandatory]="true" [isDisabled]="false">
                       </generic-date-picker>
 
                       <!-- INTEGER -->
@@ -151,7 +151,7 @@
                         [label]="getFragmentInputLabel(placeholder, fragmentIndex, fragmentInstancesMap.get(selectedFragments[i]!.code)!)"
                         [form]="form"
                         [propertyName]="buildFormControlName(fragmentInstance.code, placeholder, fragmentIndex)"
-                        [isDisabled]="false" type="number">
+                        [isMandatory]="true" [isDisabled]="false" type="number">
                       </generic-input>
 
                       <!-- SELECT -->
@@ -160,7 +160,7 @@
                         [label]="getFragmentInputLabel(placeholder, fragmentIndex, fragmentInstancesMap.get(selectedFragments[i]!.code)!)"
                         [form]="form" [serviceFieldType]="placeholder"
                         [propertyName]="buildFormControlName(fragmentInstance.code, placeholder, fragmentIndex)"
-                        [isMandatory]="false" [isDisabled]="false">
+                        [isMandatory]="true" [isDisabled]="false">
                       </select-value-service-field-type>
 
                       <!-- DEFAULT / UNKNOWN -->
