--- a/client-myjss/src/app/modules/quotation/components/notice-template/notice-template.component.html
+++ b/client-myjss/src/app/modules/quotation/components/notice-template/notice-template.component.html
@@ -15,7 +15,7 @@
 
             <!-- TEXT -->
             <div>
-              <generic-input *ngIf="placeholder.dataType === SERVICE_FIELD_TYPE_TEXT" [(model)]="placeholder.label"
+              <generic-input *ngIf="placeholder.dataType === SERVICE_FIELD_TYPE_TEXT" [model]="placeholder.label"
                 [label]="placeholder.label" [form]="form" [propertyName]="placeholder.code + '_' + placeholder.id"
                 [isDisabled]="false" [isMandatory]="true" [maxLength]="255">
               </generic-input>
@@ -23,23 +23,23 @@
 
             <!-- TEXTAREA -->
             <div>
-              <generic-textarea *ngIf="placeholder.dataType === SERVICE_FIELD_TYPE_TEXTAREA"
-                [(model)]="placeholder.value" [label]="placeholder.label" [form]="form"
-                [propertyName]="placeholder.code + '_' + placeholder.id" [isDisabled]="false" [isMandatory]="true">
+              <generic-textarea *ngIf="placeholder.dataType === SERVICE_FIELD_TYPE_TEXTAREA" [model]="placeholder.value"
+                [label]="placeholder.label" [form]="form" [propertyName]="placeholder.code + '_' + placeholder.id"
+                [isDisabled]="false" [isMandatory]="true">
               </generic-textarea>
             </div>
 
             <!-- DATE -->
             <div>
-              <generic-date-picker *ngIf="placeholder.dataType === SERVICE_FIELD_TYPE_DATE"
-                [(model)]="placeholder.value" [label]="placeholder.label" [form]="form"
-                [propertyName]="placeholder.code + '_' + placeholder.id" [isMandatory]="true" [isDisabled]="false">
+              <generic-date-picker *ngIf="placeholder.dataType === SERVICE_FIELD_TYPE_DATE" [model]="placeholder.value"
+                [label]="placeholder.label" [form]="form" [propertyName]="placeholder.code + '_' + placeholder.id"
+                [isMandatory]="true" [isDisabled]="false">
               </generic-date-picker>
             </div>
 
             <!-- INTEGER -->
             <div>
-              <generic-input *ngIf="placeholder.dataType === SERVICE_FIELD_TYPE_INTEGER" [(model)]="placeholder.value"
+              <generic-input *ngIf="placeholder.dataType === SERVICE_FIELD_TYPE_INTEGER" [model]="placeholder.value"
                 [label]="placeholder.label" [form]="form" [propertyName]="placeholder.code + '_' + placeholder.id"
                 [isMandatory]="true" [isDisabled]="false" type="number">
               </generic-input>
@@ -48,7 +48,7 @@
             <!-- SELECT -->
             <div>
               <select-value-service-field-type *ngIf="placeholder.dataType === SERVICE_FIELD_TYPE_SELECT"
-                [(model)]="placeholder.value" [label]="placeholder.label" [form]="form"
+                [model]="placeholder.value" [label]="placeholder.label" [form]="form"
                 [propertyName]="placeholder.code + '_' + placeholder.id" [serviceFieldType]="placeholder"
                 [isMandatory]="true" [isDisabled]="false">
               </select-value-service-field-type>
@@ -120,7 +120,7 @@
 
                       <!-- TEXT -->
                       <generic-input *ngIf="placeholder.dataType === SERVICE_FIELD_TYPE_TEXT"
-                        [(model)]="placeholder.label"
+                        [model]="placeholder.label"
                         [label]="getFragmentInputLabel(placeholder, fragmentIndex, fragmentInstancesMap.get(selectedFragments[i]!.code)!)"
                         [form]="form"
                         [propertyName]="buildFormControlName(fragmentInstance.code, placeholder, fragmentIndex)"
@@ -129,7 +129,7 @@
 
                       <!-- TEXTAREA -->
                       <generic-textarea *ngIf="placeholder.dataType === SERVICE_FIELD_TYPE_TEXTAREA"
-                        [(model)]="placeholder.value"
+                        [model]="placeholder.value"
                         [label]="getFragmentInputLabel(placeholder, fragmentIndex, fragmentInstancesMap.get(selectedFragments[i]!.code)!)"
                         [form]="form"
                         [propertyName]="buildFormControlName(fragmentInstance.code, placeholder, fragmentIndex)"
@@ -138,7 +138,7 @@
 
                       <!-- DATE -->
                       <generic-date-picker *ngIf="placeholder.dataType === SERVICE_FIELD_TYPE_DATE"
-                        [(model)]="placeholder.value"
+                        [model]="placeholder.value"
                         [label]="getFragmentInputLabel(placeholder, fragmentIndex, fragmentInstancesMap.get(selectedFragments[i]!.code)!)"
                         [form]="form"
                         [propertyName]="buildFormControlName(fragmentInstance.code, placeholder, fragmentIndex)"
@@ -147,7 +147,7 @@
 
                       <!-- INTEGER -->
                       <generic-input *ngIf="placeholder.dataType === SERVICE_FIELD_TYPE_INTEGER"
-                        [(model)]="placeholder.value"
+                        [model]="placeholder.value"
                         [label]="getFragmentInputLabel(placeholder, fragmentIndex, fragmentInstancesMap.get(selectedFragments[i]!.code)!)"
                         [form]="form"
                         [propertyName]="buildFormControlName(fragmentInstance.code, placeholder, fragmentIndex)"
@@ -156,7 +156,7 @@
 
                       <!-- SELECT -->
                       <select-value-service-field-type *ngIf="placeholder.dataType === SERVICE_FIELD_TYPE_SELECT"
-                        [(model)]="placeholder.value"
+                        [model]="placeholder.value" (onFormFocus)="setSelectedFragment(fragmentInstance.code)"
                         [label]="getFragmentInputLabel(placeholder, fragmentIndex, fragmentInstancesMap.get(selectedFragments[i]!.code)!)"
                         [form]="form" [serviceFieldType]="placeholder"
                         [propertyName]="buildFormControlName(fragmentInstance.code, placeholder, fragmentIndex)"
