--- a/client-myjss/src/app/modules/quotation/components/notice-template/notice-template.component.html
+++ b/client-myjss/src/app/modules/quotation/components/notice-template/notice-template.component.html
@@ -15,7 +15,7 @@
 
             <!-- TEXT -->
             <div>
-              <generic-input *ngIf="placeholder.dataType === SERVICE_FIELD_TYPE_TEXT" [model]="placeholder.label"
+              <generic-input *ngIf="placeholder.dataType === SERVICE_FIELD_TYPE_TEXT" [model]="placeholder.value"
                 [label]="placeholder.label" [form]="form" [propertyName]="placeholder.code + '_' + placeholder.id"
                 [isDisabled]="false" [isMandatory]="true" [maxLength]="255">
               </generic-input>
@@ -120,7 +120,7 @@
 
                       <!-- TEXT -->
                       <generic-input *ngIf="placeholder.dataType === SERVICE_FIELD_TYPE_TEXT"
-                        [model]="placeholder.label"
+                        [model]="placeholder.value"
                         [label]="getFragmentInputLabel(placeholder, fragmentIndex, fragmentInstancesMap.get(selectedFragments[i]!.code)!)"
                         [form]="form"
                         [propertyName]="buildFormControlName(fragmentInstance.code, placeholder, fragmentIndex)"
