--- a/client-myjss/src/app/modules/my-account/components/order-details/order-details.component.html
+++ b/client-myjss/src/app/modules/my-account/components/order-details/order-details.component.html
@@ -355,11 +355,11 @@
                       <label for="text-select"
                         class="form-label">{{assoServiceFieldType.serviceFieldType.label}}</label>
                       <div>
-                        <select id="text-select" class="form-select form-select-lg" [compareWith]="compareWithId"
-                          [(ngModel)]="assoServiceFieldType.selectValue">
+                        <select id="text-select" class="form-select form-select-lg"
+                          [(ngModel)]="assoServiceFieldType.selectValue" [compareWith]="compareWithId">
                           <option
                             *ngFor="let option of assoServiceFieldType.serviceFieldType.serviceFieldTypePossibleValues"
-                            [value]="option">
+                            [ngValue]="option">
                             {{option.value}}</option>
                         </select>
                       </div>
