--- a/client-myjss/src/app/modules/my-account/components/quotation-details/quotation-details.component.html
+++ b/client-myjss/src/app/modules/my-account/components/quotation-details/quotation-details.component.html
@@ -347,7 +347,7 @@
                           [(ngModel)]="assoServiceFieldType.selectValue">
                           <option
                             *ngFor="let option of assoServiceFieldType.serviceFieldType.serviceFieldTypePossibleValues"
-                            [value]="option">
+                            [ngValue]="option">
                             {{option.value}}</option>
                         </select>
                       </div>
