--- a/client-myjss/src/app/modules/quotation/components/notice-template/notice-template.component.html
+++ b/client-myjss/src/app/modules/quotation/components/notice-template/notice-template.component.html
@@ -91,11 +91,9 @@
               <div class="col-12 mt-3" *ngIf="selections.length>1">
                 <select-announcement-notice-template-fragment [types]="selections" [(model)]="selectedFragments[i]"
                   (modelChange)="onFragmentSelectionChange($event, i)" label="Selectionner" [form]="form"
-                  [propertyName]="'select_'+selections[0].code"
-                  [isMandatory]="false"></select-announcement-notice-template-fragment>
+                  [propertyName]="'SELECT_'+selections[0].label" [isMandatory]="isRequired(selections)">
+                </select-announcement-notice-template-fragment>
               </div>
-
-
             </div>
 
             <!-- Loop over placeholder entries -->
